fix font size, overflow, text align

--- a/pyscada/theme/static/pyscada/css/theme/theme.css
+++ b/pyscada/theme/static/pyscada/css/theme/theme.css
@@ -85,7 +85,8 @@
   	padding-top:10px;
   	padding-left: 10px;
     height: 100%;
-    width: 99%;
+    width: 100%;
+    overflow-x: hidden;
     background-color: var(--couleurSubpageBG);
 }
 
@@ -210,7 +211,7 @@ i, span {
 .widget {
     color: var(--couleur_panelFont);
     padding:0px 20px;
-    font-size: 1.5em;
+    /*font-size: 1.5em;*/
     font-weight: 500;
 }
 
@@ -326,6 +327,7 @@ i, span {
 
 #sidebar.active .sidebar-header strong {
     display: block;
+    font-size: 15px !important;
 }
 
 #sidebar ul li a {
@@ -360,7 +362,14 @@ i, span {
 
 #sidebar .sidebar-header {
     padding: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
     background: var(--couleur_sidebarBG);
+}
+
+#sidebar .sidebar-header h3 {
+  font-size: 35px;
+  text-align: center;
 }
 
 #sidebar .sidebar-header strong {
